<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright 2019 The Chromium Authors. All rights reserved.
     Use of this source code is governed by a BSD-style license that can be
     found in the LICENSE file. -->

<resources>
    <!-- DualControlLayout button ids -->
    <item type="id" name="button_primary" />
    <item type="id" name="button_secondary" />
</resources>
