...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/modern_primary_color">
    <org.chromium.chrome.browser.toolbar.TabSwitcherButtonView
        android:id="@+id/tab_switcher_button"
        style="@style/BottomToolbarButton"
        android:layout_gravity="start"
        android:contentDescription="@string/accessibility_toolbar_btn_tabswitcher_toggle_default" />
    <org.chromium.chrome.browser.toolbar.bottom.SearchAccelerator
        android:id="@+id/search_accelerator"
        android:layout_width="@dimen/search_accelerator_width"
...
            android:id="@+id/toolbar_left_button"
            style="@style/BottomToolbarButton"
            android:src="@drawable/ic_expand_less_black_24dp"
            app:tint="@color/standard_mode_tint"
            android:contentDescription="@string/accessibility_bottom_tab_strip_expand_tab_sheet" />
        <FrameLayout
            android:id="@+id/toolbar_container_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
        <org.chromium.ui.widget.ChromeImageView
            android:id="@+id/toolbar_right_button"
            style="@style/BottomToolbarButton"
...
