...
        <item android:id="@+id/update_menu_id"
            android:title="@string/menu_update"
            android:icon="@drawable/menu_update" />
        <item android:id="@+id/move_to_other_window_menu_id"
            android:title="@string/menu_move_to_other_window" />
        <item android:id="@+id/new_tab_menu_id"
            android:title="@string/menu_new_tab" />
        <item android:id="@+id/new_incognito_tab_menu_id"
            android:title="@string/menu_new_incognito_tab" />
        <item android:id="@+id/all_bookmarks_menu_id"
            android:title="@string/menu_bookmarks" />
        <item android:id="@+id/recent_tabs_menu_id"
            android:title="@string/menu_recent_tabs" />
...
